# AutoRecLabTeam5

./: .gitignore  README.md  config.py  config.toml  main.py  pricing.json  prompt_run5_paperreplikation.txt  prompt_run6_eigenerprompt.txt  pyproject.toml  viz.py
cli/embeddings/: main.py
treesearch/: function_specs.py  interpreter.py  minimal_agent.py  search.py
treesearch/llm/: query.py
treesearch/utils/: costs_tracker.py
utils/: log.py  statistics_tracker.py
workspace/: ml100k_lenskit_implicitmf_reproducibility.csv  runfile.py
workspace/run1/: runfile.py
workspace/run1/working/: ml100k_interactions.npy
workspace/run2/: runfile.py
workspace/run2/working/: all_results.csv  results_array.npy  results_df.npy  results_matrix.npy  summary.json
workspace/run3/: runfile.py
workspace/run4/: runfile.py
workspace/run4/working/: amazon_videogames_Pat10_boxplot_data.npy  amazon_videogames_nDCGat10_boxplot_data.npy  lastfm_Pat10_boxplot_data.npy  lastfm_nDCGat10_boxplot_data.npy  ml100k_Pat10_boxplot_data.npy  ml100k_nDCGat10_boxplot_data.npy  preprocessing_summary.csv  preprocessing_summary.npy  seed_metrics.csv  seed_metrics.npz  user_metrics.npz
workspace/run5/: runfile.py
workspace/run5/working/: amazon_videogames_ground_truth.npy  amazon_videogames_metrics.npy  experiment_data.npy  lastfm_ground_truth.npy  ml100k_ground_truth.npy  ml100k_metrics.npy  ml100k_predictions.npy  (+7 more)
workspace/run6/: runfile.py
workspace/working/: amazon_videogames_predictions.npy  experiment_data.npy  lastfm_metrics.npy  lastfm_predictions.npy  ml100k_ground_truth.npy  ml100k_implicitmf_results.csv  ml100k_losses.npy  ml100k_metrics.npy  ml100k_predictions.npy  ml100k_seed_metrics.npy  ml100k_timestamps.npy  paired_stats.csv  results_table.npz  seed_sensitivity_paired_tests.npy  seed_sensitivity_results.csv  seed_sensitivity_results.npy  seed_sensitivity_summary.csv
(+2 files in other folders)
